--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,47 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.navbar a,
+.navbar a:focus {
+  display: flex;
+  padding: 10px 0 10px 30px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #3e73c9;
+}
+
+.navbar a i,
+.navbar a:focus i {
+  font-size: 12px;
+  line-height: 0;
+  margin-left: 5px;
+}
+
+.navbar a:hover,
+.navbar .active,
+.navbar .active:focus,
+.navbar li:hover > a {
+  color: #434eb5;
+}
+
+.navbar .getstarted,
+.navbar .getstarted:focus {
+  background: #e2e5fe;
+  padding: 9px 25px;
+  margin-left: 30px;
+  border-radius: 5px;
+  font-weight: 600;
+  color: #fff;
+  color: #3b4ef8;
+}
+
+.navbar .getstarted:hover,
+.navbar .getstarted:focus:hover {
+  color: #fff;
+  background: #3b4ef8;
+}
+
 #hero h1 {
   margin: 0;
   font-size: 48px;
@@ -12,14 +53,6 @@
   width: 50%;
   color: #2d405f;
 }
-
-/* #hero h1 {
-  font-size: 48px;
-  font-weight: 700;
-  color: #141d2b;
-  color: #2d405f;
-  width: 50%;
-} */
 
 #hero h2 {
   color: #466393;
@@ -45,6 +78,29 @@
 
 #hero .btn-get-started:hover {
   background: #0a22f6;
+}
+
+@media (max-width: 992px) {
+  #hero h1 {
+    font-size: 36px;
+    line-height: 42px;
+    width: 100%;
+  }
+
+  #hero h2 {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  #hero .hero-img {
+    max-width: 90%;
+  }
+}
+
+@media (max-height: 768px) {
+  #hero {
+    height: auto;
+  }
 }
 
 .about {
@@ -127,4 +183,5 @@
     max-width: 40%;
   }
 }
+
 /* client section end */
